Bug 1959815 - Use most up-to-date transform for evaluating target coverage. r=aosmond

CurrentState().transform is only reliably set for save/restore ops, so isn't save to
check for evaluating coverage in EnsureTarget. This change uses GetCurrentTransform
instead which will always give the correct, most up-to-date transform to use.

Differential Revision: https://phabricator.services.mozilla.com/D245198